adding og meta for fb

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="FORMATIA REGALIS" />
+    <meta property="og:image" content="https://formatiaregalis.ro/logo-regalis.jpeg" />
     <meta
     property="og:description"
-    content="FORMATIA REGALIS IASI"
+    content="0756300163"
     />
-    <meta property="og:url" content="http://formatiaregalis.ro" />
+    <meta property="og:url" content="https://formatiaregalis.ro" />
     <title>FORMATIA REGALIS </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap" rel="stylesheet">
