--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   .social-item {
     display: flex;
     flex-direction: row;
+    border-radius: 5px;
     flex-wrap: wrap;
     align-items: center;
     width: 150px;
@@ -85,14 +86,14 @@
       </div>
         <div class="">
           <h1 class="tc" style="margin-bottom: 0; margin-top: 0; display: flex; flex-direction: row; align-items: center; justify-content: center; align-content: center; align-self: center;"><a href="tel:0040756300163"><img style="width: 28px; height: 28px; margin-right: 5px;" src="./icon-phone.svg" alt="telefon">0756.300.163</a></h1>
-          <p style="text-align: center; margin-top: 0;">Ionut Ciobanu</p>
+          <p style="text-align: center; margin-top: 0;">Ionut Ciobanu - solist vocal</p>
         </div>
         <div class="">
-          <p style="width: 100%; margin-bottom: 0; text-align: center;">Follow us</p>
+          <p style="width: 100%; margin-bottom: 0; text-align: center;">Follow us on</p>
           <div class="social-container">
-            <a class="social-item" href="https://www.fb.me/formatiaregalis"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-fb.svg" alt="facebook">Facebook</a>
-            <a class="social-item" href="https://www.instagram.com/formatiaregalis/"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-insta.svg" alt="instagram">Instagram</a>
-            <a class="social-item" href="https://www.tiktok.com/@formatiaregalis"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-tiktok.svg" alt="tiktok">TikTok</a>
+            <a class="social-item" href="https://www.fb.me/formatiaregalis"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-fb.svg" alt="facebook">FACEBOOK</a>
+            <a class="social-item" href="https://www.instagram.com/formatiaregalis/"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-insta.svg" alt="instagram">INSTAGRAM</a>
+            <a class="social-item" href="https://www.tiktok.com/@formatiaregalis"><img style="width: 25px; height: 25px; margin-right: 5px;" src="./icon-tiktok.svg" alt="tiktok">TIKTOK</a>
           </div>
         </div>
       <p style="text-align: center;">WEBSITE IN LUCRU</p>
